--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /__pycache__
-/results
-/Not\ working
-/laurent\ code
-/KLEM
-/aggregation\ GTAP
+/results/
+/Not working/
+/laurent code/
+/KLEM/
+/aggregation GTAP/
 
 
